tools/aws-submariner/ansible/roles/master/files/code/netshoot.yaml
apiVersion: v1
kind: Pod
metadata:
  name: netshoot
  namespace: default
spec:
  containers:
    - name: netshoot
      image: nicolaka/netshoot
      imagePullPolicy: IfNotPresent
      command:
        - sleep
        - "3600"
  nodeSelector:
    "submariner.io/gateway": "true"
  restartPolicy: Always
